Fix: Add required base href placeholder for Flutter web deployment

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,9 @@
   
   <title>Exam Coach - Personalized Quiz App</title>
   
+  <!-- Base href for Flutter deployment -->
+  <base href="$FLUTTER_BASE_HREF">
+  
   <!-- Theme Color -->
   <meta name="theme-color" content="#673AB7">
   <meta name="apple-mobile-web-app-status-bar-style" content="#673AB7">
