🔧 Add Permissions-Policy to allow unload event
✅ RESOLVES:
- Permissions policy violation warning in browser console
- Suppresses 'unload is not allowed' false positive

🚀 Improves console cleanliness for deployed app

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Permissions-Policy" content="unload=(self)">
   <meta name="description" content="Exam Coach - Get personalized quizzes for your exam preparation">
 
   <!-- iOS meta tags & icons -->
