--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,10 @@
   </style>
 </head>
 <body>
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <div id="recaptcha-container"></div>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
