FIX: Correct Flutter web init and Permissions-Policy

--- a/web/index.html
+++ b/web/index.html
@@ -37,20 +37,7 @@
   </style>
 </head>
 <body>
-  <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        }
-      }).then(function(engineInitializer) {
-        return engineInitializer.initializeEngine();
-      }).then(function(appRunner) {
-        return appRunner.runApp();
-      });
-    });
-  </script>
   <div id="recaptcha-container"></div>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html> 
